# whitelist-cnv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: conditional_filter.cnv  simple_filter.cnv
src/: main.rs  mojang.rs  options.rs  script.rs
