[package]
name = "whitelist-cnv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
rhai = "1.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.21.0"
